Added maintenance reqs

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -201,11 +201,17 @@ involved in the Project}
 
 \section{Maintainability and Support Requirements}
 \subsection{Maintenance Requirements}
-\lips
+\subsubsection*{NFR-MR1}
+\begin{itemize}
+  \item \textbf{Description:} All maintainance required for the system shall be possible to complete by a competent software developer after reading all of the documentation provided in the source repository.
+  \item \textbf{Rationale:} The system should be well documented, and therefore maintainable after reading said documents.
+  \item \textbf{Fit Criterion:} A competent software developer, as determined by the original developers or their agents, can solve problems related to the core of the system, as determined by the 
+  features outlined in this document.
+\end{itemize}
 \subsection{Supportability Requirements}
-\lips
+N/A
 \subsection{Adaptability Requirements}
-\lips
+N/A
 
 \section{Security Requirements}
 \subsection{Access Requirements}
