Added Legal Reqs

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -225,9 +225,26 @@ involved in the Project}
 
 \section{Compliance Requirements}
 \subsection{Legal Requirements}
-\lips
+\subsubsection*{NFR-COR1}
+\begin{itemize}
+  \item \textbf{Description:} The system shall not be available in any country currently facing economic sanctions by the Government of Canada.
+  \item \textbf{Rationale:} Legal requirement to operate.
+  \item \textbf{Fit Criterion:} Website must not be reachable in sanctioned countries.
+\end{itemize}
+\subsubsection*{NFR-COR2}
+\begin{itemize}
+  \item \textbf{Description:} The system shall follow Canadian tax code when accepting and paying out earnings.
+  \item \textbf{Rationale:} Legal requirement to operate.
+  \item \textbf{Fit Criterion:} All relevant tax codes must be satisfied when accepting payment from Customers or paying out earnings to Labelers.
+\end{itemize}
+\subsubsection*{NFR-COR3}
+\begin{itemize}
+  \item \textbf{Description:} The system shall allow Customers to restrict Labelers from certain regions from labeling the images related to their service request.
+  \item \textbf{Rationale:} Customers may be uploading sensitive images, which are inappropriate for international Labelers to view.
+  \item \textbf{Fit Criterion:} No restricted image, as identified by the customer, shall be shown to a restricted group.
+\end{itemize}
 \subsection{Standards Compliance Requirements}
-\lips
+N/A
 
 \section{Open Issues}
 \lips
