Fixed Relevant Facts

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -102,11 +102,11 @@ involved in the Project}
 
 \subsection*{5.1 Relevant Facts}
 \begin{itemize}[leftmargin=2cm]
-    \item \textbf{Market Need for Labeled Satellite Data}: There is a significant gap in the availability of high-quality labeled satellite imagery tailored for various industries like disaster response, environmental monitoring, and defense.
-    \item \textbf{Use of AI for Labeling}: The project employs an AI-powered crowdsourcing model to facilitate image labeling, which will then be used to build datasets for computer vision applications.
-    \item \textbf{Crowdsourcing and Compensation Model}: Users on the platform will label images and receive compensation, helping to ensure data quality while incentivizing participation.
-    \item \textbf{Platform Accessibility}: The platform will be web-based, accessible through any modern browser on major operating systems (Windows, Linux, macOS), enhancing its usability and portability.
-    \item \textbf{Client Engagement}: The primary users include end clients who require labeled data and models, users who label data, and stakeholders like rescue services, financial data companies, and agricultural enterprises who benefit from the data insights.
+    \item \textbf{Increasing Demand for Satellite Data}: There is a growing need for accurate satellite imagery across various industries, such as agriculture, disaster response, urban planning, and environmental monitoring, driven by advancements in technology and data analysis.
+    \item \textbf{Advances in AI and Computer Vision}: The rapid development of AI and computer vision techniques has made it possible to analyze and extract meaningful insights from large-scale satellite imagery more efficiently than before.
+    \item \textbf{High Cost of Manual Data Labeling}: Traditional data labeling is labor-intensive, costly, and requires expert knowledge in some cases, which slows down the process of dataset creation and model training.
+    \item \textbf{Crowdsourcing as a Viable Solution}: Crowdsourcing has proven to be a successful method for data labeling in various applications (e.g., reCAPTCHA, image tagging), providing a scalable way to collect labeled data while offering opportunities for user engagement and compensation.
+    \item \textbf{Growing Market for Geospatial Intelligence}: Governments, private enterprises, and NGOs are increasingly investing in geospatial intelligence to support decision-making processes, making high-quality, labeled datasets more valuable for predictive modeling and operational planning.
 \end{itemize}
 
 \subsection*{5.2 Business Rules}
