Added Description, Rationali and Fit Criterior

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -120,11 +120,11 @@ involved in the Project}
 
 \subsection*{5.3 Assumptions}
 \begin{itemize}[leftmargin=2cm]
-    \item \textbf{Accuracy and Reliability of Data Labeling}: It is assumed that the crowd-sourced labeling model will produce accurate datasets for training computer vision models, and there will be mechanisms to ensure data quality.
-    \item \textbf{High User Engagement}: It is assumed that the system will attract and retain a sufficient number of users willing to label images in return for compensation, ensuring timely dataset creation.
-    \item \textbf{Scalability of the Platform}: The web-based nature of the platform and its hosting on AWS/Azure will allow for easy scalability as user demand increases.
-    \item \textbf{Effective AI Model Performance}: The assumption is that the AI models used for labeling and processing satellite images will perform well enough to offer insights within appropriate time frames, and that labeled data will be suitable for training accurate models.
-    \item \textbf{Technology Stack Suitability}: It is assumed that the chosen technology stack (React, Node.js, Python, Flask, TensorFlow) will be adequate for both development and deployment of the platform, and that it will meet performance and security requirements.
+    \item \textbf{Labelers Have Reliable Internet Access}: It is assumed that all users participating in labeling have stable and sufficient internet connectivity to access the platform, label data, and interact with the system without major disruptions.
+    \item \textbf{Positive User Experience Will Attract and Retain Labelers}: The platform will rely on the assumption that a smooth user interface, fair compensation, and clear instructions will be enough to attract a substantial user base of labelers and keep them engaged over time.
+    \item \textbf{Availability of Suitable Satellite Imagery}: It is assumed that high-resolution, relevant satellite images will be readily available from commercial or open-source providers to populate the platform and support various labeling tasks.
+    \item \textbf{Demand for Labeled Data from Clients}: There is an expectation that industries requiring labeled satellite imagery will have a continuous and growing demand for these datasets, ensuring a steady client base for the platform’s services.
+    \item \textbf{Legal and Ethical Compliance for Data Use}: It is assumed that the acquisition and labeling of satellite imagery will not face any unforeseen legal or ethical issues, allowing for the data to be processed, shared, and monetized in accordance with existing regulations and ethical standards.
 \end{itemize}
 
 \section{The Scope of the Work}
