Added Stakeholders in respective sections

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -58,22 +58,47 @@ Date 2 & 1.1 & Notes\\
 \subsection{Goals of the Project}
 \lips
 \section{Stakeholders}
+
 \subsection{Client}
-\lips
+Air Rescue Services: These organizations rely on satellite imagery to assist in critical missions like search and rescue. High-quality datasets can enhance their ability to assess disaster zones or monitor large areas efficiently, making response times quicker and saving lives. Satellite images tailored to disaster management, including flood zones or forest fires, are of particular importance to them.
+
 \subsection{Customer}
-\lips
+End Clients/Customers: These stakeholders include governments, NGOs, private companies, and environmental organizations that pay for access to the labeled datasets and models. They rely on these datasets to make informed decisions in areas like environmental monitoring, urban planning, or defense-related tasks. Their satisfaction depends on the accuracy and reliability of both the data and the models provided.
+
 \subsection{Other Stakeholders}
-\lips
+Beyond the primary stakeholders, other key groups that benefit from high-quality satellite imagery datasets include:
+\begin{itemize}[leftmargin=2cm]
+    \item \textbf{Defense Agencies:} Rely on tailored data for surveillance, intelligence, and threat detection to enhance national security.
+    \item \textbf{Environmental Agencies:} Use satellite data to monitor ecosystems, track deforestation, and respond to climate change.
+    \item \textbf{Urban Planners:} Leverage data to manage land use, plan infrastructure development, and promote sustainable growth in cities.
+    \item \textbf{Disaster Relief Organizations:} Depend on satellite imagery to assess damage in real-time and prioritize aid during crisis situations, making these datasets crucial for effective disaster response.
+    \item \textbf{Image Labeling Teams:} Manually classify and annotate satellite images. Their work is crucial for building accurate datasets, and they benefit from improved tools and clearer guidelines to make the labeling process more efficient.
+\end{itemize}
+
 \subsection{Hands-On Users of the Project}
-\lips
+Users: These are individuals or entities responsible for labeling the data on the platform. In return for their efforts, they receive compensation. Their primary role is to ensure that the datasets are correctly annotated according to specified requirements, which forms the basis of the models developed. Their work directly impacts the quality and usability of the final product.
+
 \subsection{Personas}
-\lips
+\begin{itemize}[leftmargin=2cm]
+    \item \textbf{Air Rescue Analysts:} Use satellite imagery to assist in disaster management.
+    \item \textbf{Financial Data Analysts:} Utilize satellite data for economic trend analysis.
+    \item \textbf{Farmers/Agricultural Managers:} Monitor crop health, soil conditions, and weather for precision farming.
+\end{itemize}
+
 \subsection{Priorities Assigned to Users}
-\lips
+The importance of stakeholders can be prioritized based on their reliance on accurate and reliable datasets:
+\begin{itemize}[leftmargin=2cm]
+    \item \textbf{High Priority:} End Clients/Customers, Users (Data Labelers).
+    \item \textbf{Medium Priority:} Air Rescue Services, Alternative Financial Data Companies.
+    \item \textbf{Low Priority:} Urban Planners, Defense Agencies, Environmental Agencies.
+\end{itemize}
+
 \subsection{User Participation}
-\lips
+Users are integral to the platform as they label data in exchange for compensation. Their active participation is vital for ensuring that the datasets are annotated accurately and in accordance with the required specifications.
+
 \subsection{Maintenance Users and Service Technicians}
-\lips
+These users are responsible for the upkeep of the platform, ensuring that the labeling tools and data processing pipelines are functioning smoothly. They also assist in troubleshooting any technical issues faced by the users.
+
 
 \section{Mandated Constraints}
 \subsection{Solution Constraints}
